# xForge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: react-components.instructions.md  recipes.instructions.md  rust-api.instructions.md
migrations/: 001_init.sql  002_marketplace.sql  003_features.sql  004_security_audit.sql
recipes/docker-host/: playbook.yml  recipe.yaml
recipes/k8s-cluster/: playbook.yml  recipe.yaml
recipes/postgres-patroni-etcd-install-create-database/: recipe.yaml
recipes/postgresql-patroni/: playbook.yml  recipe.yaml
recipes/system-info/: playbook.yml  recipe.yaml
src/: config.rs  main.rs
src/api/: audit.rs  auth.rs  jobs.rs  keys.rs  mod.rs  notifications.rs  recipes.rs  schedules.rs  servers.rs  sources.rs  terminal.rs  users.rs  ws.rs
src/core/: executor.rs  inventory.rs  job_queue.rs  mod.rs  recipe.rs  scheduler.rs
src/db/: mod.rs  models.rs
src/ssh/: mod.rs
test-infra/: Dockerfile.ssh  authorized_keys  docker-compose.yml
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: JobLog.tsx  Layout.tsx  RecipeCard.tsx  ServerCard.tsx  Terminal.tsx
web/src/lib/: api.ts  ws.ts
web/src/pages/: Dashboard.tsx  Jobs.tsx  KeyStore.tsx  Login.tsx  Marketplace.tsx  Recipes.tsx  Schedules.tsx  SecurityAudit.tsx  ServerTerminal.tsx  Servers.tsx  Settings.tsx  Users.tsx
web/src/store/: dashboard.ts  index.ts  jobs.ts  keys.ts  marketplace.ts  notifications.ts  recipes.ts  schedules.ts  servers.ts  users.ts
