[package]
name = "xforge"
version = "0.1.0"
edition = "2021"
description = "Web-based infrastructure management tool"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "chrono",
] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# SSH
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"

# Static file embedding
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
